--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "ruta-cletera",
+  "homepage": "https://verioska.github.io/Ruta-Cletera",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "env-cmd": "^9.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:staging": "env-cmd .env.staging npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
